--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@koa/cors": "^2.2.3",
     "consola": "^2.3.2",
+    "date-fns": "^1.30.1",
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
