--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
     "vue": "^2.5.21",
+    "vue-json-pretty": "^1.4.1",
     "vuex": "^3.0.1",
     "ws": "^6.1.2"
   },
