--- a/package.json
+++ b/package.json
@@ -3,40 +3,61 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "client": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "server": "node server/index.js",
-    "dev": "run-p client server"
+    "build": "cross-env NODE_ENV=production webpack",
+    "build-all": "run-p build tsc",
+    "client": "webpack-dev-server",
+    "server": "node public/main.js",
+    "dev-server": "nodemon --watch 'server/**/*' -e ts --exec node --inspect -r ts-node/register server/main.ts",
+    "dev": "run-p client dev-server"
   },
   "main": "server/index.js",
   "dependencies": {
-    "@koa/cors": "^2.2.3",
-    "consola": "^2.3.2",
-    "date-fns": "^1.30.1",
-    "koa": "^2.6.2",
+    "@koa/cors": "^3.0.0",
+    "@mdi/font": "^3.9.97",
+    "bulma": "^0.7.5",
+    "consola": "^2.10.1",
+    "koa": "^2.7.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "lodash": "^4.17.11",
-    "vue": "^2.5.21",
-    "vue-json-pretty": "^1.4.1",
-    "vuex": "^3.0.1",
-    "ws": "^6.1.2"
+    "lodash": "^4.17.15",
+    "svelte": "^3.7.1",
+    "ws": "^7.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "compression-webpack-plugin": "^2.0.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@types/consola": "^1.0.0",
+    "@types/koa": "^2.0.48",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.0.41",
+    "@types/koa-static": "^4.0.1",
+    "@types/node": "^12.0.8",
+    "@types/ws": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "babel-eslint": "^10.0.2",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.2.0",
+    "eslint": "~6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-svelte3": "^2.7.3",
+    "file-loader": "^4.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.29.0"
+    "pug": "^2.0.4",
+    "sass": "^1.22.9",
+    "sass-loader": "^7.2.0",
+    "serve": "^11.1.0",
+    "style-loader": "^1.0.0",
+    "svelte-loader": "^2.13.6",
+    "svelte-preprocess": "^2.15.1",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0"
   }
 }
