--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "ws": "^7.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
     "@types/consola": "^1.0.0",
     "@types/koa": "^2.0.48",
     "@types/koa-logger": "^3.1.1",
@@ -36,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
     "eslint": "~6.1.0",
