switched to @mdi/svg

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "main": "server/index.js",
   "dependencies": {
     "@koa/cors": "^3.0.0",
-    "@mdi/font": "^4.1.95",
+    "@mdi/svg": "^4.1.95",
     "bulma": "^0.7.5",
     "consola": "^2.10.1",
-    "date-fns": "^2.0.0",
+    "date-fns": "^2.0.1",
     "koa": "^2.8.1",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
@@ -36,14 +36,14 @@
     "@types/koa-router": "^7.0.41",
     "@types/koa-static": "^4.0.1",
     "@types/node": "^12.7.2",
-    "@types/ws": "^6.0.1",
+    "@types/ws": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
-    "eslint": "~6.2.1",
+    "eslint": "~6.2.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -60,9 +60,11 @@
     "style-loader": "^1.0.0",
     "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^2.15.1",
+    "svg-inline-loader": "^0.8.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2",
     "webpack": "^4.39.2",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   }
