--- a/package.json
+++ b/package.json
@@ -10,33 +10,37 @@
   },
   "main": "server/index.js",
   "dependencies": {
-    "@koa/cors": "^2.2.3",
-    "consola": "^2.3.2",
-    "date-fns": "^1.30.1",
-    "koa": "^2.6.2",
-    "koa-logger": "^3.2.0",
+    "@koa/cors": "^3.0.0",
+    "consola": "^2.10.1",
+    "date-fns": "^2.0.1",
+    "koa": "^2.8.1",
+    "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "lodash": "^4.17.11",
-    "vue": "^2.5.21",
-    "vue-json-pretty": "^1.4.1",
-    "vuex": "^3.0.1",
-    "ws": "^6.1.2"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10",
+    "vue-json-pretty": "^1.6.1",
+    "vuex": "^3.1.1",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "compression-webpack-plugin": "^2.0.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
+    "@vue/eslint-config-airbnb": "^4.0.1",
+    "babel-eslint": "^10.0.3",
+    "compression-webpack-plugin": "^3.0.0",
+    "eslint": "^6.2.2",
+    "eslint-plugin-vue": "^5.2.3",
     "npm-run-all": "^4.1.5",
-    "pug": "^2.0.3",
+    "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.29.0"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.39.3"
+  },
+  "resolutions": {
+    "mixin-deep": "~2.0.1",
+    "set-value": "~3.0.1"
   }
 }
