upgraded dpes and fixed open link issue

--- a/package.json
+++ b/package.json
@@ -7,65 +7,66 @@
     "build-all": "run-p build tsc",
     "client": "webpack-dev-server",
     "server": "node public/main.js",
-    "dev-server": "nodemon --watch 'server/**/*' -e ts --exec node --inspect -r ts-node/register server/main.ts",
+    "dev-server": "node -r ts-node/register server/main.ts",
+    "watch-server": "nodemon --watch 'server/**/*' -e ts --exec node --inspect -r ts-node/register server/main.ts",
     "dev": "run-p client dev-server"
   },
   "main": "server/index.js",
   "dependencies": {
     "@koa/cors": "^3.0.0",
-    "@mdi/svg": "^4.2.95",
-    "bulma": "^0.7.5",
-    "consola": "^2.10.1",
-    "date-fns": "^2.0.1",
-    "koa": "^2.8.1",
+    "@mdi/svg": "^4.5.95",
+    "bulma": "^0.8.0",
+    "consola": "^2.11.0",
+    "date-fns": "^2.8.0",
+    "koa": "^2.11.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
-    "svelte": "^3.9.1",
-    "ws": "^7.1.2"
+    "svelte": "^3.15.0",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/preset-env": "^7.5.5",
-    "@types/consola": "^1.0.0",
-    "@types/koa": "^2.0.48",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/preset-env": "^7.7.1",
+    "@types/consola": "^2.2.5",
+    "@types/koa": "^2.0.52",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.41",
     "@types/koa-static": "^4.0.1",
-    "@types/node": "^12.7.3",
+    "@types/node": "^12.12.11",
     "@types/ws": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
-    "cross-env": "^5.2.0",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
-    "eslint": "~6.2.2",
+    "eslint": "~6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "file-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "nodemon": "^1.19.1",
+    "nodemon": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "pug": "^2.0.4",
-    "sass": "^1.22.10",
+    "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
-    "serve": "^11.1.0",
+    "serve": "^11.2.0",
     "style-loader": "^1.0.0",
     "svelte-loader": "^2.13.6",
-    "svelte-preprocess": "^3.0.2",
+    "svelte-preprocess": "^3.2.6",
     "svg-inline-loader": "^0.8.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.6.2",
-    "webpack": "^4.39.3",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
