--- a/package.json
+++ b/package.json
@@ -1,72 +1,49 @@
 {
-  "name": "r2log",
-  "version": "0.1.0",
+  "name": "ui",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "build-all": "run-p build tsc",
-    "client": "webpack-dev-server",
-    "server": "node public/main.js",
-    "dev-server": "node -r ts-node/register server/main.ts",
-    "watch-server": "nodemon --watch 'server/**/*' -e ts --exec node --inspect -r ts-node/register server/main.ts",
-    "dev": "run-p client dev-server"
+    "dev": "cross-env NODE_ENV=development dotenv -c local -- run-p client:dev server:dev",
+    "client:dev": "vite",
+    "server:dev": "ts-node server/main.ts",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
-  "main": "server/index.js",
   "dependencies": {
-    "@koa/cors": "^3.0.0",
-    "@mdi/svg": "^4.5.95",
-    "bulma": "^0.8.0",
-    "consola": "^2.11.0",
-    "date-fns": "^2.8.0",
-    "koa": "^2.11.0",
-    "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "lodash": "^4.17.15",
-    "svelte": "^3.15.0",
-    "ws": "^7.2.0"
+    "fastify": "^3.20.2",
+    "fastify-cors": "^6.0.2",
+    "fastify-http-proxy": "^6.2.0",
+    "fastify-static": "^4.2.3",
+    "fastify-websocket": "^4.0.0",
+    "lodash": "^4.17.21",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "tailwindcss": "^2.2.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/preset-env": "^7.7.1",
-    "@types/consola": "^2.2.5",
-    "@types/koa": "^2.0.52",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa-router": "^7.0.41",
-    "@types/koa-static": "^4.0.1",
-    "@types/node": "^12.12.11",
-    "@types/ws": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "eslint": "~6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-svelte3": "^2.7.3",
-    "file-loader": "^4.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "nodemon": "^2.0.0",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^16.7.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/ws": "^7.4.7",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.3.4",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^4.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "npm-run-all": "^4.1.5",
-    "pug": "^2.0.4",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
-    "serve": "^11.2.0",
-    "style-loader": "^1.0.0",
-    "svelte-loader": "^2.13.6",
-    "svelte-preprocess": "^3.2.6",
-    "svg-inline-loader": "^0.8.0",
-    "ts-node": "^8.5.2",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "postcss": "^8.3.6",
+    "stylus": "^0.55.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.3.2",
+    "vite": "^2.5.2"
   }
 }
