--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,27 @@
 {
   "compilerOptions": {
-    "target": "es2019",
-    "lib": [
-      "esnext"
-    ],
-    "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "public",
-    "sourceMap": false
+    "outDir": "dist",
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": false,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react"
   },
   "include": [
-    "server/**/*.ts"
+    "./client/**/*.ts",
+    "./client/**/*.tsx",
+    "./server/*.ts",
+    "vite.config.ts"
   ],
   "exclude": [
     "node_modules"
