--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "fastify": "^3.20.2",
     "fastify-cors": "^6.0.2",
     "fastify-http-proxy": "^6.2.0",
@@ -18,9 +19,11 @@
     "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.5",
     "tailwindcss": "^2.2.9"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.15",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.7.10",
     "@types/react": "^17.0.0",
