--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development dotenv -c local -- run-p client:dev server:dev",
-    "client:dev": "vite",
-    "server:dev": "ts-node server/main.ts",
-    "build": "tsc && vite build",
+    "build:client": "tsc --noEmit && vite build",
+    "build:server": "tsc -b server",
+    "build": "run-p build:client build:server",
+    "dev:client": "vite",
+    "dev:server": "ts-node server/main.ts",
+    "dev": "cross-env NODE_ENV=development dotenv -c local -- run-p dev:client dev:server",
+    "prod": "cross-env NODE_ENV=production dotenv -c prod -- node dist/main.js",
     "serve": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
-    "fastify": "^3.20.2",
+    "fastify": "^3.21.0",
     "fastify-cors": "^6.0.2",
     "fastify-http-proxy": "^6.2.0",
     "fastify-static": "^4.2.3",
@@ -20,17 +23,18 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.5",
-    "tailwindcss": "^2.2.9"
+    "tailwindcss": "^2.2.15"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.1.15",
+    "@tsconfig/node14": "^1.0.1",
+    "@types/babel__core": "^7.1.16",
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.7.10",
-    "@types/react": "^17.0.0",
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.0",
     "@types/ws": "^7.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.3.4",
     "cross-env": "^7.0.3",
@@ -46,7 +50,7 @@
     "postcss": "^8.3.6",
     "stylus": "^0.55.0",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.2"
+    "typescript": "^4.4.3",
+    "vite": "^2.5.6"
   }
 }
