--- a/package.json
+++ b/package.json
@@ -7,50 +7,47 @@
     "build:server": "tsc -b server",
     "build": "run-p build:client build:server",
     "dev:client": "vite",
-    "dev:server": "ts-node server/main.ts",
+    "dev:server": "tsx server/main.ts",
     "dev": "cross-env NODE_ENV=development dotenv -c local -- run-p dev:client dev:server",
     "prod": "cross-env NODE_ENV=production dotenv -c prod -- node dist/main.js",
     "serve": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.1",
-    "fastify": "^3.21.0",
-    "fastify-cors": "^6.0.2",
-    "fastify-http-proxy": "^6.2.0",
-    "fastify-static": "^4.2.3",
-    "fastify-websocket": "^4.0.0",
+    "@fastify/cors": "^8.1.0",
+    "@fastify/static": "^6.5.0",
+    "@fastify/websocket": "^7.0.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "fastify": "^4.5.3",
     "lodash": "^4.17.21",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-redux": "^7.2.5",
-    "tailwindcss": "^2.2.15"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.1",
-    "@types/babel__core": "^7.1.16",
-    "@types/lodash": "^4.14.172",
+    "@types/lodash": "^4.14.184",
     "@types/node": "^16.9.1",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.0",
-    "@types/ws": "^7.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.3.4",
+    "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
-    "dotenv-cli": "^4.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.25.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "dotenv-cli": "^6.0.0",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.6",
-    "stylus": "^0.55.0",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "vite": "^2.5.6"
+    "postcss": "^8.4.16",
+    "stylus": "^0.59.0",
+    "tsx": "^3.9.0",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9"
   }
 }
