--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,10 @@
 {
-  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "jsx": "react",
     "outDir": "../dist",
     "preserveConstEnums": true
   },
