--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build:client": "tsc --noEmit && vite build",
-    "build:server": "tsc -b server",
-    "build": "run-p build:client build:server",
+    "build:client": "vite build",
+    "build:server": "esbuild server/main.ts --bundle --platform=node --minify --format=cjs --target=node16 > dist/main.js",
+    "build": "tsc --noEmit && run-p build:client build:server",
     "dev:client": "vite",
     "dev:server": "tsx server/main.ts",
     "dev": "cross-env NODE_ENV=development dotenv -c local -- run-p dev:client dev:server",
@@ -30,24 +30,25 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^6.0.0",
+    "esbuild": "^0.15.7",
     "eslint": "^8.23.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.5",
+    "eslint-plugin-react": "^7.31.7",
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
     "stylus": "^0.59.0",
     "tsx": "^3.9.0",
     "typescript": "^4.8.2",
-    "vite": "^3.0.9"
+    "vite": "^3.1.0"
   }
 }
