--- a/package.json
+++ b/package.json
@@ -16,39 +16,40 @@
     "@fastify/cors": "^8.1.0",
     "@fastify/static": "^6.5.0",
     "@fastify/websocket": "^7.0.1",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@reduxjs/toolkit": "^2.6.1",
     "fastify": "^4.7.0",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "tailwindcss": "^3.1.8"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.15",
     "@types/lodash": "^4.14.186",
-    "@types/node": "^16.9.1",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "^22.13.13",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.12",
     "cross-env": "^7.0.3",
-    "dotenv-cli": "^6.0.0",
-    "esbuild": "^0.15.10",
+    "dotenv-cli": "^8.0.0",
+    "esbuild": "^0.25.1",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.17",
-    "stylus": "^0.59.0",
-    "tsx": "^3.9.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.4"
+    "stylus": "^0.64.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.3"
   }
 }
